# power-market-simulator

./: .gitignore  DK1 load.csv  Makefile  README.md  REFACTOR_PLAN.md  chart.py  main.py  market.py  pyproject.toml  setup.py  standard.py
src/api/: main.py  models.py
src/power_market_simulator/: __init__.py  service.py
src/power_market_simulator/engine/: __init__.py  market.py  setup.py  solar.py  weather.py
tests/: test_api.py  test_engine.py  test_models.py
