[tool.poetry]
name = "power-market-simulator"
version = "0.1.0"
description = "A FastAPI service for electricity market simulation with merit-order dispatch and unit-commitment constraints"
authors = ["Bakeable"]
readme = "README.md"
packages = [
    { include = "power_market_simulator", from = "src" },
    { include = "api", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0"
numpy = "^1.24"
scipy = "^1.10"
fastapi = "^0.115"
uvicorn = {version = "^0.34", extras = ["standard"]}
pydantic = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
httpx = "^0.28"
ruff = "^0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
src = ["src", "tests"]
line-length = 100
